[project]
name = "edu-convokit"
version = "0.1"
requires-python = ">=3.11"
tqdm = "*"
numpy = "*"
scipy = "*"
nltk = "*"
torch = "*"
transformers = "*"
clean-text = "*"
openpyxl = "*"
spacy = "*"
gensim = "*"
num2words = "==0.5.10"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
pandas = "*"
tiktoken = "*"
openai = "==0.28"
tenacity = "*"
python-dotenv = "*"
dependencies = [
    "cleantext>=1.1.4",
    "matplotlib>=3.10.3",
    "num2words>=0.5.14",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "spacy>=3.8.7",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
